--- a/MSBuildForUnity.Common.props
+++ b/MSBuildForUnity.Common.props
@@ -2,9 +2,9 @@
   
   <!-- These are specific to this Unity project and can't be overridden -->
   <PropertyGroup>
-    <UnityProjectAssetsPath>C:\Users\alexi\Desktop\Git_Repos\Whack-a-tap\Whack-a-tap\Assets</UnityProjectAssetsPath>
+    <UnityProjectAssetsPath>C:\develop\Whack-a-tap\Assets</UnityProjectAssetsPath>
     
-    <_MSBuildForUnityGeneratedOutputDirectory>C:\Users\alexi\Desktop\Git_Repos\Whack-a-tap\Whack-a-tap\MSBuild</_MSBuildForUnityGeneratedOutputDirectory>
+    <_MSBuildForUnityGeneratedOutputDirectory>C:\develop\Whack-a-tap\MSBuild</_MSBuildForUnityGeneratedOutputDirectory>
     <MSBuildForUnityGeneratedProjectDirectory>$(_MSBuildForUnityGeneratedOutputDirectory)\Projects</MSBuildForUnityGeneratedProjectDirectory>
   </PropertyGroup>
   
